Fix Photo Overlay z-index

--- a/src/components/Photo/Photo.scss
+++ b/src/components/Photo/Photo.scss
@@ -7,6 +7,6 @@
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 300;
+  z-index: 400;
 }
 
